--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="app-container">
             <div class="controls-container">
                  <div class="filters">
-                    <h3>Фильтры</h3>
+                    <h5>Категории</h5>
                     <div id="category-tree-container">
                          <div id="category-tree">
                             <p>Загрузка категорий...</p>
