--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         </div>
                      </div>
                      <div class="filter-group">
-                        <label for="duration-filter">Длительность:</label>
+                        <h5>Длительность</h5>
                         <select id="duration-filter">
                             <option value="all">Любая</option>
                             <option value="short">&lt; 20 мин</option>
